--- a/burger-basics--04-after-modal/src/components/UI/Modal/Modal.css
+++ b/burger-basics--04-after-modal/src/components/UI/Modal/Modal.css
@@ -1,7 +1,7 @@
 .Modal {
     position: fixed;
     z-index: 500;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
@@ -10,7 +10,6 @@
     top: 30%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
-    text-align: center;
 }
 
 @media (min-width: 600px) {
