--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,32 +1,45 @@
 .Burger {
-    width: 100%;
-    margin: auto;
-    height: 250px;
-    overflow: scroll;
+    width: 300px;
+    height: 50%;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
+    overflow-y: auto;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (min-width: 500px) and (min-height: 400px) {
+/* /* @media (min-width: 500px) and (min-height: 400px) {
     .Burger {
         width: 350px;
         height: 300px;
     }
+} */
+@media (min-width: 500px){
+   
+   .Burger{
+       
+       width: 350px;
+} 
 }
-
-@media (min-width: 500px) and (min-height: 401px) {
-    .Burger {
-        width: 450px;
-        height: 400px;
-    }
+@media (min-width: 700px){
+   
+   .Burger{
+        height: 60%;
+       width: 400px;
+       align-self: flex-start;
+       margin-top: 50px;
+} 
 }
-
-@media (min-width: 1000px) and (min-height: 700px) {
-    .Burger {
-        width: 700px;
-        height: 600px;
-    }
+@media (min-width: 1000px){
+   
+   .Burger{
+       
+       width: 500px;
+} 
 }
 /* .Burger
 {
